# RestaurantBES

./: .gitignore  Protocol.md  README.md
Gosha/QmlNavigationDrawer/: Fragment1.qml  Fragment2.qml  LeftNavigationDrawer.qml  LoginForm.qml  Makefile  Profile.qml  QmlNavigationDrawer  QmlNavigationDrawer.pro  QmlNavigationDrawer.pro.user.4270d6e  RegisterForm.qml  RightNavigationDrawer.qml  images.qrc  main.qml  qml.qrc  qrc_images.cpp  qrc_qml.cpp
Gosha/QmlNavigationDrawer/.qtc_clangd/: compile_commands.json
Gosha/QmlNavigationDrawer/.qtc_clangd/.cache/clangd/index/: __stddef_max_align_t.h.3D369674445ADB89.idx  alloca.h.B3C3404035C15EA6.idx  array.661D83F8EAEC6A2D.idx  atomic_base.h.3A2E72751505F214.idx  chrono.C0F4C75E74621C97.idx  cstddef.E24F265AA3562071.idx  cstdint.8EFBCBA3007A64A4.idx  cxxabi_init_exception.h.8655CBBAC3570E80.idx  erase_if.h.5918914467808E69.idx  functional.D37DCEFB5C8BEE5E.idx  limits.h.FED947070945AD5C.idx  locale.h.5F1EA2E91D0CD92F.idx  main.cpp.A3FD1B6B9D1F294E.idx  main.cpp.C35A5D1A029968C8.idx  parse_numbers.h.4EF330D60C82D342.idx  qalgorithms.h.27757019B6BDE3A3.idx  qapplication.h.12716BE5F07B2F50.idx  qatomic.h.EDA2609CDEFA91A8.idx  qatomic_cxx11.h.52558A0C15C27E03.idx  qbasicatomic.h.443D971FF16961BD.idx  qbytearray.h.B9342019FB36475F.idx  qchar.h.55986FA83C2F8DCB.idx  qcompilerdetection.h.B3DFF00B81F14185.idx  qcoreapplication.h.FEE0D697086509DB.idx  qcoreevent.h.D2170B6AE7CEF77F.idx  qcursor.h.5AA353008A1F957B.idx  qflags.h.041ACBB7FBD8C35E.idx  qgenericatomic.h.54E939376D70C601.idx  qglobal.h.2C17EABD0E130173.idx  qguiapplication.h.0B935BF2733AF69D.idx  qhash.h.158CE76BADA6800F.idx  qhashfunctions.h.4A84817D42E613A4.idx  qinputmethod.h.6D522BCEB7A3B0D5.idx  qiterator.h.D85153AA76807357.idx  qlist.h.F3A1871DE33D9905.idx  qlocale.h.5BBA25091CA1C3DF.idx  qlogging.h.BC73A8D36AC8AAF4.idx  qmap.h.AC1B3050263A0ACE.idx  qmetaobject.h.4FF5852028C2DAE9.idx  qmetatype.h.19B847AEC93D6BFD.idx  (+43 more)
Gosha/QmlNavigationDrawer/qml/: Fragment1.qml  Fragment2.qml  Fragment3.qml  LoginForm.qml  main.qml
Gosha/QmlNavigationDrawer/src/: images.qrc  main.cpp
Liza/: CMakeLists.txt  DataFormat.md  admin.cpp  admin.h  cart.h  client.cpp  client.h  fwd.h  order.h  owner.cpp  owner.h  server.cpp  server.h  sql_query.txt  tgBot.cpp
Liza/Telegram_Bot/: CMakeLists.txt  tgBot.cpp  tgBot.h  tgBot_main.cpp
Liza/include/: admin.h  cart.h  client.h  fwd.h  handlers.h  order.h  tgBot.h
Liza/src/: admin.cpp  cart.cpp  client.cpp  handlers.cpp  main.cpp  order.cpp  server.cpp  tgBot.cpp
Liza/tgbot-cpp/: CMakeLists.txt
Liza/tgbot-cpp/include/tgbot/net/: TgLongPoll.h
Liza/tgbot-cpp/include/tgbot/types/: BotCommand.h
Telegram_Bot/: CMakeLists.txt  main.cpp
Ver/: CMakeLists.txt
Ver/BetterMessenger/: CMakeLists.txt  README.md
Ver/BetterMessenger/client/: client.cpp
Ver/BetterMessenger/server/include/: chat.h  fwd.h  message.h  server.h  user.h
Ver/BetterMessenger/server/source/: chat.cpp  message.cpp  server.cpp  server_main.cpp  test-chat.cpp  user.cpp
Ver/Messenger/: CMakeLists.txt  chat.h  client.cpp  server.cpp
Ver/NotificationSystem/: CMakeLists.txt  chat.cpp  chat.h  client.cpp  server.cpp  server.h  server_main.cpp  test-chat.cpp
Ver/QtClient/: AnswerFormat.md  CMakeLists.txt  NotificationFormat.md  QmlNavigationDrawer.pro  README.md  exampleMenu.json
Ver/QtClient/include/: CartList.h  CartListFWD.h  CartModel.h  Client.h  MenuData.h  MenuItem.h  MenuList.h  MenuModel.h  Order.h  OrderList.h  OrderModel.h  fwd.h  jsonParser.h
Ver/QtClient/qml/: CartDrawer.qml  Header.qml  Information.qml  LeftNavigationDrawer.qml  Menu.qml  MenuPage.qml  NavButton.qml  NavigationDrawer.qml  OrderPage.qml  OrderPopup.qml  OrderStatusPopup.qml  Profile.qml  ProfilePage.qml  RegisterForm.qml  RegisterPopup.qml  RightNavigationDrawer.qml  SignInPopup.qml  main.qml
Ver/QtClient/src/: CartList.cpp  CartModel.cpp  Client.cpp  MenuData.cpp  MenuList.cpp  MenuModel.cpp  Order.cpp  OrderList.cpp  OrderModel.cpp  client.cpp  jsonParser.cpp  main.cpp  qml.qrc
Ver/QtMessenger/: AnswerFormat.md  CMakeLists.txt
Ver/QtMessenger/include/: CartList.h  CartModel.h  MenuData.h  MenuList.h  MenuModel.h  client.h  fwd.h
Ver/QtMessenger/qml/: CartDrawer.qml  Header.qml  Menu.qml  main.qml
Ver/QtMessenger/src/: CartList.cpp  CartModel.cpp  MenuData.cpp  MenuList.cpp  MenuModel.cpp  images.qrc  main.cpp  qml.qrc
Ver/Server/: README.md
Ver/Server/include/: fwd.h  server.h  user.h
Ver/Server/src/: session.cpp  user.cpp
Ver/ServerExample/: CMakeLists.txt  OpenAPI.yml  README.md  exampleMenu.json  exampleMenu2.json
Ver/ServerExample/client/: client.cpp
Ver/ServerExample/include/: handlers.h  session.h
Ver/ServerExample/server/include/: fwd.h  handlers.h  server.h  session.h  user.h
Ver/ServerExample/server/source/: handlers.cpp  server.cpp  server_main.cpp  session.cpp  user.cpp
Ver/ServerExample/src/: handlers.cpp  server_main.cpp
